--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   	</a>
   	<ul>
   		<li>I was the youngest girl in my graduating class.</li>
-  		<li>My favorite color is blue.</li>
+  		<li>My favorite colorhkhkihkih is blue.</li>
   		<li>I love Law and Order: SVU.</li>
   	</ul>
   </body>
