--- a/index.html
+++ b/index.html
@@ -1,18 +1,19 @@
 <html>
   <head>
+    <link rel="stylesheet" href="style.css">
     <title>about me</title>
   </head>
   <body>
     <h1>Leslie Coney</h1>
-  	Howard University<br>
+  	<h1> !Howard University! </h1><br>  
   	<img src="pic.jpg"><br>
   	<a href="https://www.khanacademy.org/computing/computer-programming">
-  	  Coding for Starters
+  	 Coding for Starters
   	</a>
-  	<ul>
-  		<li>I was the youngest girl in my graduating class.</li>
-  		<li>My favorite color is blue.</li>
+  	<ul id="list">
+  	  <li>I was the youngest girl in my graduating class.</li>
+  	  <li>My favorite color is blue.</li>
   		<li>I love Law and Order: SVU.</li>
-  	</ul>
+  	 </ul>  
   </body>
 </html>
